# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py  misc.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
